# squirrel_radar

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE.md  LICENSES_THIRD_PARTY.md  Makefile  README.md  cli.py  condaenv_squirrel_radar.yml  pyproject.toml  squirrel_radar.code-workspace
.github/workflows/: ci.yml
src/: cli.py  squirrel_radar.py
