[project]
name = "squirrel_radar"
version = "1.0.0"
description = "Squirrel Radar Implemention by Oreum Industries"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{ name = "Jonathan Sedar", email = "jonathan.sedar@oreum.io" },]
requires-python = "==3.10.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "confuse>=1.7.0",
    "ipywidgets>=7.6",
    "pandas>=2.0.1",
    "plotly",
    "kaleido",
    "rich>=12.5.0",
    "typer[all]>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pipdeptree",
    "pip-licenses",
    "pre-commit",
]

[project.urls]
homepage = "https://github.com/oreum-industries/squirrel_radar"

[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = true
skip-magic-trailing-comma = true
include = '\.py$'
extend-exclude = """/(__pycache__)/"""
# check = true # diff = true  # allow for different calls to use this
color = true
fast = false
verbose = true

[tool.isort]
profile = 'black'
multi_line_output = 3
skip_gitignore = true
